# applin-rust-demo

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  check.sh  render.yaml
src/: account.rs  index.rs  main.rs  pages.rs  widgets.rs
